--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Trained[[:space:]]Model/bert_chatbot_model.pth filter=lfs diff=lfs merge=lfs -text
+Trained[[:space:]]Model/chatbot_model/model.safetensors filter=lfs diff=lfs merge=lfs -text
